--- a/.gitignore
+++ b/.gitignore
@@ -109,5 +109,5 @@ dist
 .tern-port
 
 # Ignore index.css and index.css.map
-./src/sass/index.css
-./src/sass/index.css.map
+**/src/sass/index.css
+**/src/sass/index.css.map
